--- a/styles1.css
+++ b/styles1.css
@@ -299,7 +299,8 @@ hr {
     margin: 2rem 0rem;
     font-family: "Source Sans 3", sans-serif;
     height: 50%;
-    margin-top: 32% !important;
+    margin-left: 10px;
+    margin-top: 20% !important;
 }
 
 .social-icon {
@@ -746,7 +747,7 @@ hr {
 
 .carousel-item .caption-left.blue-box {
     position: absolute;
-    top: 7%;
+    top: 9%;
     left: 0px;
     transform: translateY(-50%);
     background-color: #007BFF; /* Azul */
@@ -763,7 +764,7 @@ hr {
 
 .carousel-text.item-1 {
     position: absolute;
-    top: 300px;
+    top: 200px;
     bottom: 20%; /* Ajuste conforme necessário */
     left: 50%;
     transform: translateX(-50%);
@@ -777,14 +778,14 @@ hr {
 
 .carousel-title {
     position: absolute;
-    top: 4%;
+    top: 6%;
     left: 0px;
     transform: translateY(-50%);
     background-color: #007BFF; /* Azul */
     color: #fff; /* Cor do texto */
     padding: 15px;
     text-align: left;
-    width: 24%; 
+    width: 25%; 
     border-radius: 8px; /* Arredondamento das bordas */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra para suavizar a caixa */
     display: flex;
@@ -1013,16 +1014,19 @@ hr {
     padding: 15px;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    flex: 1 1 calc(33.333% - 20px); /* Ocupa 1/3 do espaço em telas grandes */
-    max-width: 300px; /* Limita a largura máxima */
-    min-width: 200px; /* Define uma largura mínima */
-    height: 200px; /* Define a altura fixa */
+    flex: 1 1 calc(33.333% - 20px);
+    max-width: 300px;
+    min-width: 200px;
+    height: 200px;
+    margin: 10px 20px; 
     display: flex;
-    flex-direction: column; /* Garante alinhamento vertical do conteúdo */
-    justify-content: center; /* Centraliza verticalmente */
-    align-items: center; /* Centraliza horizontalmente */
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;
     text-align: center;
+    transform: translateX(-20px);
 }
+
 
 /* Títulos dos itens de status */
 .status-item h3 {
